welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var nbrPas:int = 0
           ^